CIT-26 Fix null pointer exception in FieldServiceImplTest